# TRACE

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
configs/: _dataset.py  calms21.py  large.py  small.py
configs/tridet/: tridet_large.py  tridet_small.py
docs/: annotation-playback-perf.md  codec-aware-video-serving.md  home-page-mousemove-perf.md  lossless-video-pipeline.md  pts-based-frame-mapping.md  shift-arrow-short-clip-nav.md
site/: index.html
site/assets/: site.css
tests/: conftest.py  test_backend_app.py  test_cli.py  test_data_prep_pts.py  test_eval_engine.py  test_eval_threshold_metrics.py  test_infer_discovery.py  test_job_manager.py  test_jobs_router.py  test_pipeline_plan.py  test_prep_dataset.py  test_pts_phase2.py  test_pts_phase3.py  test_train_tune.py  test_training_resources.py  test_video_annotation.py
tools/: infer.py  prep_dataset.py  test.py  train.py  tune_train.py
trace-annotator/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
trace-annotator/backend/: app.py  jobs_router.py  requirements.txt
trace-annotator/src/: App.scss  App.tsx  configureTest.ts  index.scss  index.tsx
trace_tad/: __init__.py  api.py  cli.py  config.py  data_prep.py  export.py  model_artifacts.py  pipeline.py  pipeline_plan.py  registry.py  training_resources.py  video_annotation.py  weights.py
trace_tad/cores/: __init__.py  eval_engine.py  layer_decay_optimizer.py  optimizer.py  train_engine.py
trace_tad/datasets/: __init__.py  builder.py  thumos.py
trace_tad/evaluations/: __init__.py  builder.py  mAP.py  precision.py
trace_tad/jobs/: __init__.py  manager.py  models.py
trace_tad/models/: __init__.py  builder.py
trace_tad/server/: __init__.py  app.py  jobs_router.py  run_dev.py
trace_tad/utils/: __init__.py  auto_tune.py  logger.py  (+2 more)
(+213 files in other folders)
